--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "robloxLsp.diagnostics.disable": [
         "trailing-space"
+    ],
+    "Lua.diagnostics.globals": [
+        "game"
     ]
 }
